Finish up the basics of logging and add tests for it too